--- a/feed.html
+++ b/feed.html
@@ -34,70 +34,51 @@
       </ul>
     </div>
   </nav>
-
-<div class="p-3">
-  <h2>Your Feed</h2>
-</div>
-
-<div class="d-block justify-content-center">
-
-  <div class="card m-5 text-center" style="width: 25rem;">
-    <h5>Posted by {{shoes.User.username}} on {{format_date post.createAt}}</h5>
-    <img src="https://i.ebayimg.com/images/g/a9oAAOSwAdljfaD5/s-l1600.jpg" class="card-img-top" alt="panda">
-    <div class="card-body">
-      <h5 class="card-title">{{shoes.name}}</h5>
-    </div>
-    <ul class="list-group list-group-flush">
-      <li class="list-group-item">{{shoes.brand}}</li>
-      <li class="list-group-item">{{shoes.style}}</li>
-    </ul>
-    <div class="card-body">
-      <a href="#" class="card-link">Edit</a>
-      <a href="#" class="card-link">Delete</a>
-    </div>
-  </div>
-
-  <div class="card m-5 text-center" style="width: 25rem;">
-    <h5>Posted by {{shoes.User.username}} on {{format_date post.createAt}}</h5>
-    <img src="https://i.ebayimg.com/images/g/a9oAAOSwAdljfaD5/s-l1600.jpg" class="card-img-top" alt="panda">
-    <div class="card-body">
-      <h5 class="card-title">{{shoes.name}}</h5>
-    </div>
-    <ul class="list-group list-group-flush">
-      <li class="list-group-item">{{shoes.brand}}</li>
-      <li class="list-group-item">{{shoes.style}}</li>
-    </ul>
-    <div class="card-body">
-      <a href="#" class="card-link">Edit</a>
-      <a href="#" class="card-link">Delete</a>
-    </div>
-  </div>
   
-  <div class="card m-5 text-center" style="width: 25rem;">
-    <h5>Posted by {{shoes.User.username}} on {{format_date post.createAt}}</h5>
-    <img src="https://i.ebayimg.com/images/g/a9oAAOSwAdljfaD5/s-l1600.jpg" class="card-img-top" alt="panda">
-    <div class="card-body">
-      <h5 class="card-title">{{shoes.name}}</h5>
-    </div>
-    <ul class="list-group list-group-flush">
-      <li class="list-group-item">{{shoes.brand}}</li>
-      <li class="list-group-item">{{shoes.style}}</li>
-    </ul>
-    <div class="card-body">
-      <a href="#" class="card-link">Edit</a>
-      <a href="#" class="card-link">Delete</a>
-    </div>
+  <div class="p-3">
+    <h2>Your Feed</h2>
   </div>
-    
-</div>
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-lg-8">
 
+          <div class="card m-5 text-center" style="width: 25rem;">
+            <h5>Posted by {{shoes.User.username}} on {{format_date post.createAt}}</h5>
+            <img src="https://i.ebayimg.com/images/g/a9oAAOSwAdljfaD5/s-l1600.jpg" class="card-img-top" alt="panda">
+            <div class="card-body">
+              <h5 class="card-title">{{shoes.name}}</h5>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">{{shoes.brand}}</li>
+              <li class="list-group-item">{{shoes.style}}</li>
+            </ul>
+          </div>
 
+          <div class="card m-5 text-center" style="width: 25rem;">
+            <h5>Posted by {{shoes.User.username}} on {{format_date post.createAt}}</h5>
+            <img src="https://i.ebayimg.com/images/g/a9oAAOSwAdljfaD5/s-l1600.jpg" class="card-img-top" alt="panda">
+            <div class="card-body">
+              <h5 class="card-title">{{shoes.name}}</h5>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">{{shoes.brand}}</li>
+              <li class="list-group-item">{{shoes.style}}</li>
+            </ul>
+          </div>
 
-  <footer>
+          <div class="card m-5 text-center" style="width: 25rem;">
+            <h5>Posted by {{shoes.User.username}} on {{format_date post.createAt}}</h5>
+            <img src="https://i.ebayimg.com/images/g/a9oAAOSwAdljfaD5/s-l1600.jpg" class="card-img-top" alt="panda">
+            <div class="card-body">
+              <h5 class="card-title">{{shoes.name}}</h5>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">{{shoes.brand}}</li>
+              <li class="list-group-item">{{shoes.style}}</li>
+            </ul>
+          </div>
 
-  </footer>
+      </div>
+    </div>
+  </div>  
 
-</body>
-
-
-</html>
